# yadro_task

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.test/: test.cpp
include/: init.hpp  itape.hpp  tape.hpp  tape_head.hpp  tape_sort.hpp
modules/: CMakeLists.txt
src/: init.cpp  tape.cpp  tape_head.cpp  tape_sort.cpp
